// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders Colors 1`] = `
<body>
  <div>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_100__jzpfqdj Text_textStyle_variants_size_100__jzpfqd5 Text_textStyle_weight_normal__jzpfqds"
    >
      primary (default)
    </p>
    <p
      class="Text__jzpfqdd Text_textStyle_color_secondary__jzpfqdf Text_textStyle_variants_color_secondary__jzpfqd1 Text_textStyle_size_100__jzpfqdj Text_textStyle_variants_size_100__jzpfqd5 Text_textStyle_weight_normal__jzpfqds"
    >
      secondary
    </p>
    <p
      class="Text__jzpfqdd Text_textStyle_color_tertiary__jzpfqdg Text_textStyle_variants_color_tertiary__jzpfqd2 Text_textStyle_size_100__jzpfqdj Text_textStyle_variants_size_100__jzpfqd5 Text_textStyle_weight_normal__jzpfqds"
    >
      tertiary
    </p>
  </div>
</body>
`;

exports[`Text renders Sample 1`] = `
<body>
  <div>
    <h1
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_600__jzpfqdo Text_textStyle_variants_size_600__jzpfqda Text_textStyle_weight_bold__jzpfqdr"
    >
      H1
    </h1>
    <h2
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_500__jzpfqdn Text_textStyle_variants_size_500__jzpfqd9 Text_textStyle_weight_bold__jzpfqdr"
    >
      H2
    </h2>
    <h3
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_400__jzpfqdm Text_textStyle_variants_size_400__jzpfqd8 Text_textStyle_weight_bold__jzpfqdr"
    >
      H3
    </h3>
    <h4
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_300__jzpfqdl Text_textStyle_variants_size_300__jzpfqd7 Text_textStyle_weight_bold__jzpfqdr"
    >
      H4
    </h4>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_100__jzpfqdj Text_textStyle_variants_size_100__jzpfqd5 Text_textStyle_weight_normal__jzpfqds"
    >
      P
    </p>
    <span
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_100__jzpfqdj Text_textStyle_variants_size_100__jzpfqd5 Text_textStyle_weight_normal__jzpfqds"
    >
      Span
    </span>
  </div>
</body>
`;

exports[`Text renders Sizes 1`] = `
<body>
  <div>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_50__jzpfqdh Text_textStyle_variants_size_50__jzpfqd3 Text_textStyle_weight_normal__jzpfqds"
    >
      50
    </p>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_100__jzpfqdj Text_textStyle_variants_size_100__jzpfqd5 Text_textStyle_weight_normal__jzpfqds"
    >
      100 (default)
    </p>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_200__jzpfqdk Text_textStyle_variants_size_200__jzpfqd6 Text_textStyle_weight_normal__jzpfqds"
    >
      200
    </p>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_300__jzpfqdl Text_textStyle_variants_size_300__jzpfqd7 Text_textStyle_weight_normal__jzpfqds"
    >
      300
    </p>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_400__jzpfqdm Text_textStyle_variants_size_400__jzpfqd8 Text_textStyle_weight_normal__jzpfqds"
    >
      400
    </p>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_500__jzpfqdn Text_textStyle_variants_size_500__jzpfqd9 Text_textStyle_weight_normal__jzpfqds"
    >
      500
    </p>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_600__jzpfqdo Text_textStyle_variants_size_600__jzpfqda Text_textStyle_weight_normal__jzpfqds"
    >
      600
    </p>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_700__jzpfqdp Text_textStyle_variants_size_700__jzpfqdb Text_textStyle_weight_normal__jzpfqds"
    >
      700
    </p>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_800__jzpfqdq Text_textStyle_variants_size_800__jzpfqdc Text_textStyle_weight_normal__jzpfqds"
    >
      800
    </p>
  </div>
</body>
`;

exports[`Text renders Weights 1`] = `
<body>
  <div>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_100__jzpfqdj Text_textStyle_variants_size_100__jzpfqd5 Text_textStyle_weight_normal__jzpfqds"
    >
      normal (default)
    </p>
    <p
      class="Text__jzpfqdd Text_textStyle_color_primary__jzpfqde Text_textStyle_variants_color_primary__jzpfqd0 Text_textStyle_size_100__jzpfqdj Text_textStyle_variants_size_100__jzpfqd5 Text_textStyle_weight_bold__jzpfqdr"
    >
      bold
    </p>
  </div>
</body>
`;
